2024-06-28 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.9.10
	  download from github

2024-06-28 Treeve Jelbert <treeve@sourcemage.org>
	* *: remove svn support

2015-05-25 Thomas Orgis <sobukus@sourcemage.org>
	* DETAILS: remove SOURCEFORGE_URL usage (automated)

2011-07-30 Florian Franzmann <bwlf@bandrate.org>
	* DEPENDS: changed dependency on g++ to dependency on gcc with
	  sub-depends on CXX (scripted)

2010-01-30 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: firebird => FIREBIRD

2009-06-22 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: add subversion

2009-06-08 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: wxgtk -> WXWIDGET, add g++
	* PREPARE, DETAILS: support svn version

2009-04-11 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.9.2

2008-09-24 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.9.0

2008-08-24 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.8.7.1723
	* PREPARE: added
	  add support for snapshot versions

2008-03-17 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.8.6

2007-10-23 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.8.3

2007-10-18 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.8.1
	* BUILD: make configure executable

2007-10-11 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.8.0

2006-11-22 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.7.6

2006-09-06 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.7.5

2006-05-26 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.7.2

2006-05-15 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.7.0
	  change license to EXPAT 
	  http://www.flamerobin.org/license.html
	* PRE_BUILD: deleted, no longer needed

2006-03-18 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 0.6.0
	* BUILD: remove obsolete code
	* PRE_BUILD: added, to fix compile problem with gcc-4.1

2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>