@@ -1,0 +1,1 @@
+source $GRIMOIRE/CMAKE_CONFIGURE
