@@ -1,3 +1,4 @@
+source $GRIMOIRE/CMAKE_DEPENDS &&
 depends FIREBIRD  &&
 depends -sub CXX gcc       &&
 depends WXWIDGET
