@@ -1,3 +1,4 @@
+source $GRIMOIRE/CMAKE_FUNCTIONS
            SPELL=flamerobin
          VERSION=0.9.10
      SOURCE_HASH=sha512:90a4dcdafd4b7d39f24d261d2fe06b37842e68b137014a6d75aab78d1b738c2db4667321a1b368a2cae965a1444f296a3bba907ffce033309e37f7f60d637cfd
