@@ -1,0 +1,10 @@
+default_pre_build &&
+cd $SOURCE_DIRECTORY &&
+#sed -i -e 's|${SOURCEDIR}/||' \
+#       -e "/.h$/D" \
+#       -e "/if (WIN32)/,/endif (WIN32)/D/" \
+#       -e "/if(APPLE)/,/endif (APPLE)/D" \
+#       CMakeLists.txt
+cp $SPELL_DIRECTORY/CMakeLists.txt . &&
+mkdir cmake &&
+cp $SPELL_DIRECTORY/FindFirebird.cmake cmake
