@@ -1,6 +1,8 @@
 2024-06-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.10
 	  download from github
+	* *: use cmake build
+	* CMakeLists.txt FindFirebird.cmake PRE_BUILD: added, to fix broken upstream file
 
 2024-06-28 Treeve Jelbert <treeve@sourcemage.org>
 	* *: remove svn support
